# Turtlebot

DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_examples/src/: velocity_cmd_node.cpp
YDLidar-SDK/: bib.txt
hls_lfcd_lds_driver/launch/: hlds_laser.launch.py
hls_lfcd_lds_driver/rviz/: hlds_laser.rviz
hls_lfcd_lds_driver/src/: hlds_laser_publisher.cpp
node_turtlebot/: CMakeLists.txt  package.xml
node_turtlebot/include/node_turtlebot/: core_motores.hpp  diff_drive_controller.hpp  estructuras.h  motores.hpp  odometry.hpp  sensores.hpp
node_turtlebot/include/node_turtlebot/sensors/: imu.hpp  joint_state.hpp  sensors.hpp
node_turtlebot/src/: core_motores.cpp  diff_drive_controller.cpp  main.cpp  motores.cpp  odometry.cpp  sensores.cpp
node_turtlebot/src/sensors/: imu.cpp  joint_state.cpp
turtlebot3/turtlebot3_bringup/launch/: robot.launch.py
turtlebot3/turtlebot3_node/include/turtlebot3_node/: control_table.hpp  dynamixel_sdk_wrapper.hpp  turtlebot3.hpp
turtlebot3/turtlebot3_node/include/turtlebot3_node/sensors/: joint_state.hpp  sensors.hpp
turtlebot3/turtlebot3_node/param/: burger.yaml
turtlebot3/turtlebot3_node/src/: dynamixel_sdk_wrapper.cpp  node_main.cpp  turtlebot3.cpp
turtlebot3/turtlebot3_node/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
turtlebot3/turtlebot3_node/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
turtlebot3_mobility/: CMakeLists.txt  package.xml
turtlebot3_mobility/include/turtlebot3_mobility/: control_table.hpp  diff_drive_controller.hpp  odometry.hpp  velocity_cmd_node.hpp
turtlebot3_mobility/include/turtlebot3_mobility/sensors/: battery_state.hpp  imu.hpp  joint_state.hpp  sensor_state.hpp  sensors.hpp
turtlebot3_mobility/src/: custom_node_main.cpp  diff_drive_controller.cpp  odometry.cpp  velocity_cmd_node.cpp
turtlebot3_mobility/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
turtlebot3_node/: CMakeLists.txt  package.xml
turtlebot3_node/include/turtlebot3_node/: control_node.hpp  control_table.hpp  dynamixel_sdk_wrapper.hpp  turtlebot3.hpp
turtlebot3_node/param/: burger.yaml
turtlebot3_node/src/: dynamixel_sdk_wrapper.cpp  node_main.cpp  turtlebot3.cpp
turtlebot_control/: CMakeLists.txt  package.xml
turtlebot_control/src/: main.cpp
ydlidar_ros2_driver/params/: X4.yaml
ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
